# Snake-Game

./: CMakeLists.txt  README.md
src/: controller.cpp  controller.h  game.cpp  game.h  logfile.cpp  logfile.h  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h
